# Python-Object-Oriented-Programming---4th-edition

./: .gitignore  Makefile  README 2.md  README.md  TODO.md  bezdekIris.ndjson  bezdekiris.json  bezdekiris.yaml  env.sh  environment.yml  make.bat  python3.8.bat  python3.bat
ch_01/: README.md  concept_image.ipynb  distance_images.ipynb  pyproject.toml
ch_01/docs/: Fig_11.drawio  context.uml  development_view_1.uml  fig_1.uml  fig_10.uml  fig_2.uml  fig_3.uml  fig_4.uml  fig_5.uml  fig_6.uml  fig_7.uml  fig_8.uml  fig_9.uml  logical_view_1.uml  logical_view_2.uml  logical_view_3.uml  logical_view_4.uml  physical_view_1.uml  process_view_1.uml
ch_02/: README.md  pyproject.toml
ch_02/docs/: case_study_2.md  examples.md  fig_1.uml  fig_2.uml  fig_3.uml  fig_4.uml
ch_02/src/: bad_hints.py  first_class.py  formatter.py  main.py  model.py  point_1.py  point_2.py  point_3.py  point_4.py
ch_02/src/ecommerce/: __init__.py  database.py  products.py  vendors.py
ch_02/src/ecommerce/contact/: email.py
ch_02/tests/: test_ecommerce.py
ch_03/: README.rst  pyproject.toml
ch_03/docs/: Distances.drawio  case_study_3.md  examples.md  examples_38.md  fig_1.uml  fig_2.uml  logical_view.uml
ch_03/src/: commerce.py  commerce_naive.py  media_model_1.py  model.py
ch_04/: README.rst  pyproject.toml
ch_04/data/: users.csv
ch_04/docs/: case_study_4.md  context_view.uml  examples.md  fig_1.uml  logical_view.uml  processing_view.uml
ch_04/src/: all_exceptions.py  classifier.py  manufacturing.py  model.py  odd_example.py
ch_04/tests/: test_classifier.py  test_user.py
ch_05/: README.rst  mypy.ini  pyproject.toml  sample.zip.old
ch_05/docs/: case_study_5.md  examples.md  fig_1.uml  notes.md  properties.md
ch_05/src/: archive_tweaker.py  classifier.py  colors.py  model.py  openapi.yaml  shapes_1.py  shapes_2.py
ch_05/tests/: test_archive_tweaker.py  test_classifier.py  test_readers.py  test_user.py
ch_06/: README.rst  pyproject.toml  requirements.txt
ch_06/docs/: case_study_6.md  examples.md  fig_1.uml  fig_2.uml  metaclass.uml
ch_06/src/: classifier.py  debugging_help.py  dice.py  dict_ext.py  lookup_mapping.py  media_model_2.py  model.py  odd_example.py
ch_06/tests/: test_debugging_help.py  test_dice.py  test_lookup_mapping.py  test_partition.py
ch_07/: README.rst  pyproject.toml
ch_07/docs/: case_study_7.md  examples.md  logical_view_1.uml  logical_view_2.uml  logical_view_3.uml  logical_view_4.uml  queue.uml
ch_07/src/: classifier.py  dc_stocks.py  dictionaries.py  lists.py  model.py  model_f.py  model_t.py  queue_example.py
ch_07/tests/: test_model.py
ch_08/: README.rst  big_number.txt  pyproject.toml  requirements.txt
ch_08/docs/: case_study_8.md  context_view.uml  examples.md  process_view_1.uml  process_view_2.uml  sample_data.md
ch_08/src/: file_demo.py  function_demo.py  model.py  parameters.py
ch_08/tests/: test_function_demo.py
ch_09/: README.rst  pickled_list  pyproject.toml
ch_09/docs/: case_study_9.md  examples.md  fig_1.uml
ch_09/src/: classifier.py  code_scanner.py  contacts.py  distances.py  model.py  pattern_matching.py  url_poll.py
ch_09/tests/: data_conversion.py  test_readers.py
ch_10/: README.rst  pyproject.toml
ch_10/benches/: bench_knn.py
ch_10/docs/: Generators.drawio  case_study_10.md  examples.md  fig_1.uml  fig_2.uml  fig_3.uml  log_line_regex.uml
ch_10/src/: iterator_protocol.py  log_analysis.py  model.py
ch_10/tests/: log_sample.py  test_model.py
ch_11/: README.md  pyproject.toml
ch_11/bonus/: zonk_score.py  zonk_state.uml
ch_11/docs/: command.uml  decorator.uml  dice_regex.uml  examples.md  langston_ant.uml  nmea_message.uml  observer.uml  singleton.uml  state.uml  strategy.uml  strategy_design.uml
ch_11/src/: decorations.py  dice.py  dice_server.py  image_filler.py  inventory.py  model.py  nmea_states.py  nmea_states_2.py  socket_client.py  socket_server.py
ch_11/tests/: test_dice.py  test_dice_server.py  test_image_filler.py  test_socket_client.py  test_socket_server.py
ch_12/: README.md  gross_sales_20210126.csv  pyproject.toml  sales.db
ch_12/docs/: abstract_factory.uml  abstract_factory_example_2.uml  adapter.uml  composite.uml  facade.uml  flyweight.uml  logical_view_1.uml  template.uml
ch_12/scrap/: test.html  tree.dot
ch_12/src/: age_computation.py  car_sales.py  card_games.py  file_system.py  gps_message_slots.py  gps_messages.py  images.py  ordered_list.py
ch_12/tests/: test_car_sales.py  test_cards.py  test_images.py
ch_13/: README.md  checksums.txt  data.tar  pyproject.toml  requirements.txt
ch_13/bonus/: test_vigenere_cipher.py  vigenere_cipher.py
ch_13/docs/: case_study_13.md
ch_13/src/: checksum_writer.py  flight_status_redis.py  log_catcher.py  model.py  remote_logging_app.py  stats.py
ch_13/tests/: test_38_39.py  test_averages.py  test_check_numbers.py  test_checksum_writer.py  test_coverage.py  test_flight_status_tracker.py  test_logging_app.py  test_model.py  test_pythonista.py  test_setup_teardown.py  test_skipping.py  test_stats.py  test_stats_pytest.py  test_with_pytest.py
ch_14/: README.md  pyproject.toml  requirements.txt
ch_14/benches/: time_to_write.py
ch_14/bonus/: image_compressor.py  image_compressor_alt.py  test_image_compressor.py
ch_14/docs/: fig_1.uml  fig_2.uml  fig_2h.uml  fig_3_4.uml  logical_view_1.uml
ch_14/images/: README.rst  bricks.rle  bricks_1.rle  bricks_1.uml  bricks_2.rle  bricks_2.uml  compiling.rle  exploits_of_a_mom.rle  large.rle  make_images.py  python.rle  row.rle  sandwich.rle
ch_14/src/: async_1.py  code_search.py  correlation.py  delicatessen.py  demo_log_catcher.py  demo_signals.py  directory_search.py  food_truck.py  fw_model.py  log_catcher.py  model.py  philosophers.py  prime_factor.py  processes_1.py  remote_logging_app.py  threads_1.py  weather_async.py  weather_threads.py
ch_14/tests/: TestImage.ipynb  test_aync_1.py  test_code_search.py  test_directory_search.py  test_fw_model.py  test_log_catcher.py  test_model.py  test_philosophers.py  test_weather_async.py  test_weather_threads.py
tools/: defence.py  (+2 more)
(+3 files in other folders)
