[project]
name = "classifier"
version = "2021.4.0"
description = "Python 3 Object-Oriented Programming, 4th ed., Chapter 2"
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "k-NN", "object-oriented design",]
[[project.authors]]
email = "slott56@gmail.com"

[[project.authors]]
name = "Steven F. Lott"

[project.license]
file = "LICENSE.txt"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.20.0
skipsdist = True
[testenv]
description = "Master suite of tests for all environments."
deps =
	-rrequirements.txt
	pytest==6.2.4
	black
	mypy==0.812
setenv =
	PYTHONPATH = {toxinidir}/src{:}{toxinidir}/src/ecommerce
commands =
	black src
	python -m doctest --option ELLIPSIS src/point_2.py
	python -m doctest --option ELLIPSIS src/formatter.py
	python -m doctest --option ELLIPSIS src/point_3.py
	python -m doctest --option ELLIPSIS src/model.py
	python -m doctest --option ELLIPSIS src/bad_hints.py
	python -m doctest --option ELLIPSIS src/first_class.py
	python -m doctest --option ELLIPSIS src/point_4.py
	python -m doctest --option ELLIPSIS src/main.py
	python -m doctest --option ELLIPSIS src/point_1.py
	python -m doctest --option ELLIPSIS docs/examples.md
	python -m doctest --option ELLIPSIS docs/case_study_2.md
	python -m pytest
	mypy --strict --show-error-codes src
"""
