[project]
name = "classifier"
version = "2021.4.0"
description = "Python 3 Object-Oriented Programming, 4th ed., Chapter 9"
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "k-NN", "object-oriented design",]
[[project.authors]]
email = "slott56@gmail.com"

[[project.authors]]
name = "Steven F. Lott"

[project.license]
file = "LICENSE.txt"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist = True
[testenv]
deps =
	-rrequirements.txt
	black
	pytest==6.2.4
	tox==3.20.0
	mypy==0.812
setenv =
	PYTHONPATH = {toxinidir}/src
commands =
	black src
	python -m doctest --option ELLIPSIS src/pattern_matching.py
	python -m doctest --option ELLIPSIS src/classifier.py
	python -m doctest --option ELLIPSIS src/contacts.py
	python -m doctest --option ELLIPSIS src/distances.py
	python -m doctest --option ELLIPSIS src/url_poll.py
	python -m doctest --option ELLIPSIS src/code_scanner.py
	python -m doctest --option ELLIPSIS src/model.py
	python -m doctest --option ELLIPSIS docs/examples.md
	python -m doctest --option ELLIPSIS docs/case_study_9.md
	python -m pytest -vv
	mypy src

"""
