[project]
name = "classifier"
version = "2021.4.0"
description = "Python 3 Object-Oriented Programming, 4th ed., Chapter 10"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["k-NN", "object-oriented design"]
authors = [
  {email = "slott56@gmail.com"},
  {name = "Steven F. Lott"}
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist = True
envlist = testenv

[testenv]
deps =
  -rrequirements.txt
  black
  pytest==6.2.4
  tox==3.20.0
  mypy==0.812
setenv =
  PYTHONPATH = {toxinidir}/src
  MYPYPATH = {toxinidir}/src
  PYTHONHASHSEED = 0
commands =
  black src
  python -m doctest --option ELLIPSIS docs/case_study_10.md
  python -m doctest --option ELLIPSIS docs/examples.md
  python -m doctest --option ELLIPSIS src/model.py
  python -m doctest --option ELLIPSIS src/iterator_protocol.py
  python -m doctest --option ELLIPSIS src/log_analysis.py
  python -m pytest -vv
  mypy src --strict --python-version 3.9

[testenv:bench]
commands =
  mypy benches --strict --python-version 3.9
  python benches/bench_knn.py

"""
