[project]
name = "classifier"
version = "2021.4.0"
description = "Python 3 Object-Oriented Programming, 4th ed., Chapter 11"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["k-NN", "object-oriented design"]
authors = [
  {email = "slott56@gmail.com"},
  {name = "Steven F. Lott"}
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist = True

[testenv]
deps =
  -rrequirements.txt
  black
  pytest==6.2.4
  tox==3.20.0
  mypy==0.812
setenv =
  PYTHONPATH = {toxinidir}/src
  PYTHONHASHSEED = 0
commands =
  black src
  python -m doctest --option ELLIPSIS docs/examples.md
  python -m doctest --option ELLIPSIS src/dice.py
  python -m doctest --option ELLIPSIS src/socket_client.py
  python -m doctest --option ELLIPSIS src/socket_server.py
  python -m doctest --option ELLIPSIS src/dice_server.py
  python -m doctest --option ELLIPSIS src/decorations.py
  python -m doctest --option ELLIPSIS src/inventory.py
  python -m doctest --option ELLIPSIS src/nmea_states.py
  python -m doctest --option ELLIPSIS src/nmea_states_2.py
  python -m doctest --option ELLIPSIS src/model.py
  python -m doctest --option ELLIPSIS bonus/zonk_score.py
  python -m pytest
  mypy --strict --show-error-codes src

"""
